exports[`(.not).toHaveLockedStatus > using axios > .not.toHaveLockedStatus > fails when response have status code 423 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveLockedStatus()</intensity>

Expected status code to not be 423 received:
  <red>423</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 423,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveLockedStatus > using axios > .toHaveLockedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveLockedStatus()</intensity>

Expected status code to be 423 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
